--- a/build.gradle
+++ b/build.gradle
@@ -16,16 +16,21 @@ compileKotlin {
     kotlinOptions.jvmTarget= 1.8
 }
 
+
 dependencies {
     compile 'no.tornado:tornadofx:1.7.20'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'org.controlsfx:controlsfx:8.40.12'
     implementation 'de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.7'
-    implementation 'uk.co.caprica:vlcj:4.4.0'
     implementation 'io.humble:humble-video-all:0.3.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+}
+
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin/'
 }
 
 repositories {
@@ -50,7 +55,19 @@ dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
 }
 
-application {
-    // Define the main class for the application.
-    mainClassName = 'broadcastsFX.AppKt'
+mainClassName = "online.hudacek.broadcastsfx.MainKt"
+
+jar {
+    manifest {
+        attributes(
+                "Class-Path": configurations.compile.collect { it.getName() }.join(" "),
+                "Main-Class": mainClassName
+        )
+    }
+    from(configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }) {
+        exclude "META-INF/MANIFEST.MF"
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
 }
