--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,12 @@ dependencies {
     implementation 'de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.7'
     implementation 'io.humble:humble-video-all:0.3.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+    implementation 'io.github.microutils:kotlin-logging:1.7.9'
+    compile 'org.slf4j:slf4j-api:1.7.5'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.9.1'
+    implementation 'org.apache.logging.log4j:log4j-api:2.9.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.9.1'
+    runtime group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.70'
 }
 
 sourceSets {
