--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuView.properties
@@ -3,3 +3,4 @@ countries=Countries
 library=Library
 favourites=Favourites
 topStations=Top Stations
+downloadError = List of stations by countries cannot be downloaded right now.
