--- a/src/main/resources/online/hudacek/broadcastsfx/views/StationsView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/StationsView.properties
@@ -1,2 +1,4 @@
 retry=Retry ?
-downloadError=Unable to get list of stations
+downloadError=Unable to get list of stations. Please try again.
+noUrlError=This station is missing stream URL.
+startScreen=Start by selecting category from right menu
