--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.9.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.9.1'
     runtime group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.70'
+    implementation 'org.controlsfx:controlsfx:8.40.16'
+    compile 'no.tornado:tornadofx-controlsfx:0.1.1'
 }
 
 sourceSets {
