--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,18 @@
  * This generated file contains a sample Kotlin application project to get you started.
  */
 
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+    }
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+}
+
+
 plugins {
     // Apply the Kotlin JVM plugin to add support for Kotlin.
     id 'org.jetbrains.kotlin.jvm' version '1.3.70'
@@ -12,29 +24,40 @@ plugins {
     id 'application'
 }
 
+apply plugin: 'javafx-gradle-plugin'
+
+
 compileKotlin {
-    kotlinOptions.jvmTarget= 1.8
+    kotlinOptions.jvmTarget = 1.8
 }
 
-
 dependencies {
+    // Align versions of all Kotlin components
+    compile platform('org.jetbrains.kotlin:kotlin-bom')
+
+    // Use the Kotlin JDK 8 standard library.
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+
     compile 'no.tornado:tornadofx:1.7.20'
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:retrofit:2.8.1'
+    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'org.controlsfx:controlsfx:8.40.12'
-    implementation 'de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.7'
-    implementation 'io.humble:humble-video-all:0.3.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
-    implementation 'io.github.microutils:kotlin-logging:1.7.9'
+    compile 'de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.7'
+    compile 'io.humble:humble-video-all:0.3.0'
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+    compile 'io.github.microutils:kotlin-logging:1.7.9'
     compile 'org.slf4j:slf4j-api:1.7.5'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.9.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.9.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.9.1'
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.9.1'
+    compile 'org.apache.logging.log4j:log4j-api:2.9.1'
+    compile 'org.apache.logging.log4j:log4j-core:2.9.1'
     runtime group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.70'
-    implementation 'org.controlsfx:controlsfx:8.40.16'
+    compile 'org.controlsfx:controlsfx:8.40.16'
     compile 'no.tornado:tornadofx-controlsfx:0.1.1'
+    compile 'uk.co.caprica:vlcj:4.4.0'
+    compile 'commons-io:commons-io:2.6'
+    runtime group: 'io.humble', name: 'humble-video-all', version: '0.3.0'
 }
 
 sourceSets {
@@ -49,33 +72,12 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
-dependencies {
-    // Align versions of all Kotlin components
-    implementation platform('org.jetbrains.kotlin:kotlin-bom')
+mainClassName = "online.hudacek.broadcastsfx.BroadcastsKt"
 
-    // Use the Kotlin JDK 8 standard library.
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+jfx {
+    // minimal requirement for jfxJar-task
+    mainClass = 'online.hudacek.broadcastsfx.BroadcastsKt'
 
-    // Use the Kotlin test library.
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
-
-    // Use the Kotlin JUnit integration.
-    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
-}
-
-mainClassName = "online.hudacek.broadcastsfx.MainKt"
-
-jar {
-    manifest {
-        attributes(
-                "Class-Path": configurations.compile.collect { it.getName() }.join(" "),
-                "Main-Class": mainClassName
-        )
-    }
-    from(configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }) {
-        exclude "META-INF/MANIFEST.MF"
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-    }
+    // minimal requirement for jfxNative-task
+    vendor = 'YourName'
 }
