--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -7,6 +7,6 @@ menu.station.info=Get info
 menu.station.report=Report broken station
 menu.player.controls=Player
 menu.player.stop=Stop
-menu.player.start=Start
+menu.player.start=Play
 menu.view=View
 menu.view.stats=Statistics
