--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -1,12 +1,13 @@
-appName=FXRadio
+appName=_FXRadio
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.server=Select server
-menu.station=Station
+menu.station=_Station
 menu.station.info=Get info
 menu.station.report=Report broken station
 menu.player.controls=Player
 menu.player.stop=Stop
 menu.player.start=Play
-menu.view=View
+menu.player.switch=Use Native Media Player
+menu.view=_View
 menu.view.stats=Statistics
