--- a/src/main/resources/online/hudacek/broadcastsfx/views/StationsView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/StationsView.properties
@@ -2,3 +2,4 @@ retry=Retry ?
 downloadError=Unable to get list of stations. Please try again.
 noUrlError=This station is missing stream URL.
 startScreen=Start by selecting category from right menu
+nativePlayerInfo=Native Media Player is used. For better experience please install VLC and use VLC player
