finish attributions, fix bugs

--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -1,6 +1,7 @@
 appName=_FXRadio
 menu.app.quit=Quit
 menu.app.about=About
+menu.app.attributions=Attributions
 menu.app.server=Select server
 menu.station=_Station
 menu.station.info=Get info
