Add TickerView, add basic image cache, polish UI

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     compile 'no.tornado:tornadofx-controlsfx:0.1.1'
     compile 'uk.co.caprica:vlcj:4.4.0'
     compile 'commons-io:commons-io:2.6'
+    compile 'com.github.thomasnield:rxkotlinfx:2.2.2'
+    compile 'org.threeten:threeten-extra:1.5.0'
     runtime group: 'io.humble', name: 'humble-video-all', version: '0.3.0'
 }
 
