small refactoring, fixes, simplification of layout

--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -10,5 +10,6 @@ menu.player.controls=Player
 menu.player.stop=Stop
 menu.player.start=Play
 menu.player.switch=Use Native Media Player
+menu.history=_History
 menu.view=_View
 menu.view.stats=Statistics
