--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.github.thomasnield:rxkotlinfx:2.2.2'
     compile 'org.threeten:threeten-extra:1.5.0'
     compile 'io.reactivex.rxjava2:rxjavafx:2.2.2'
+    compile "de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.7"
     runtime group: 'io.humble', name: 'humble-video-all', version: '0.3.0'
 }
 
