--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -3,6 +3,7 @@ menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
 menu.app.server=Select server
+menu.app.clearCache=Clear image cache
 menu.station=_Station
 menu.station.info=Get info
 menu.station.report=Report broken station
