cleaup of views, sepration of duties

--- a/src/main/resources/online/hudacek/broadcastsfx/views/MainView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MainView.properties
@@ -1,2 +1,2 @@
 appName=FXRadio
-nativePlayerInfo=App started using Native Player. Consider switching to VLC player in Player menu
+nativePlayerInfo=Native Media Player is used. Some stations might not play. Please switch to VLC player
