improve tags layout, add switch to disable Ticker.kt

--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -11,6 +11,7 @@ menu.player.controls=Player
 menu.player.stop=Stop
 menu.player.start=Play
 menu.player.switch=Use Native Media Player
+menu.player.animate=Show animated radio name
 menu.history=_History
 menu.view=_View
 menu.view.stats=Statistics
