--- a/src/main/resources/online/hudacek/broadcastsfx/views/LibraryView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/LibraryView.properties
@@ -3,4 +3,5 @@ countries=Countries
 library=Library
 favourites=Favourites
 topStations=Top Stations
-downloadError = List of stations by countries cannot be downloaded right now.
+downloadError=List of stations by countries cannot be downloaded right now.
+downloadRetry=The list of countries cannot be downloaded. Retry?
