work on add new station

--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -15,3 +15,4 @@ menu.player.animate=Show animated radio name
 menu.history=_History
 menu.view=_View
 menu.view.stats=Statistics
+menu.station.add=Add new station
