--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ plugins {
 
 apply plugin: 'javafx-gradle-plugin'
 
-version "0.1.0-SNAPSHOT"
+version "0.1.0"
 
 compileKotlin {
     kotlinOptions.jvmTarget = 1.8
