--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -16,3 +16,7 @@ menu.history=_History
 menu.view=_View
 menu.view.stats=Statistics
 menu.station.add=Add new station
+cache.clear.confirm=Are you sure?
+cache.clear.ok=Cache cleared successfully.
+cache.clear.error=There was an error when clearing cache.
+cache.clear.text=This action will clear all local images of radio stations. This cannot be undone
