first simple version of favourites

--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -20,3 +20,5 @@ cache.clear.confirm=Are you sure?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
 cache.clear.text=This action will clear all local images of radio stations. This cannot be undone
+menu.station.favourite=Add to favourites
+menu.station.favourite.added=Station added to favourites!
