--- a/build.gradle
+++ b/build.gradle
@@ -29,31 +29,35 @@ dependencies {
 
     // Use the Kotlin JDK 8 standard library.
     compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    runtime group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.70'
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
 
     compile 'no.tornado:tornadofx:1.7.20'
+    compile 'org.controlsfx:controlsfx:8.40.16'
+    compile 'org.controlsfx:controlsfx:8.40.12'
+    compile 'no.tornado:tornadofx-controlsfx:0.1.1'
+
     compile 'com.squareup.retrofit2:retrofit:2.8.1'
     compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    compile 'com.github.thomasnield:rxkotlinfx:2.2.2'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'org.controlsfx:controlsfx:8.40.12'
-    compile 'io.humble:humble-video-all:0.3.0'
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+
     compile 'io.github.microutils:kotlin-logging:1.7.9'
     compile 'org.slf4j:slf4j-api:1.7.5'
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.9.1'
     compile 'org.apache.logging.log4j:log4j-api:2.9.1'
     compile 'org.apache.logging.log4j:log4j-core:2.9.1'
-    runtime group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.70'
-    compile 'org.controlsfx:controlsfx:8.40.16'
-    compile 'no.tornado:tornadofx-controlsfx:0.1.1'
-    compile 'uk.co.caprica:vlcj:4.4.0'
+
     compile 'commons-io:commons-io:2.6'
-    compile 'com.github.thomasnield:rxkotlinfx:2.2.2'
-    compile 'io.reactivex.rxjava2:rxjavafx:2.2.2'
+
     compile 'org.xerial:sqlite-jdbc:3.21.0.1'
-    compile 'org.nield:rxkotlin-jdbc:0.2.5'
+    compile 'org.nield:rxkotlin-jdbc:0.4.1'
     compile "de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.7"
-    runtime group: 'io.humble', name: 'humble-video-all', version: '0.3.0'
+
+    //Players
+    compile 'io.humble:humble-video-all:0.3.0'
+    compile 'uk.co.caprica:vlcj:4.4.0'
 }
 
 sourceSets {
