add history library, refactoring of player and station view

--- a/src/main/resources/online/hudacek/broadcastsfx/views/LibraryView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/LibraryView.properties
@@ -5,3 +5,4 @@ favourites=Favourites
 topStations=Top Stations
 downloadError=List of stations by countries cannot be downloaded right now.
 downloadRetry=Download error. Retry?
+history=History
