--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -22,3 +22,4 @@ cache.clear.error=There was an error when clearing cache.
 cache.clear.text=This action will clear all local images of radio stations. This cannot be undone
 menu.station.favourite=Add to favourites
 menu.station.favourite.added=Station added to favourites!
+menu.station.favourite.error=Station is already in your favourites!
