add basic tests

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,11 @@ dependencies {
     //Players
     compile 'io.humble:humble-video-all:0.3.0'
     compile 'uk.co.caprica:vlcj:4.4.0'
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testCompile "org.testfx:testfx-core:4.0.16-alpha"
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+    testCompile "org.testfx:testfx-junit5:4.0.16-alpha"
 }
 
 
@@ -84,4 +89,8 @@ jfx {
     deployDir = "src/main/deploy"
     nativeOutputDir = "build/jfx/native"
     nativeReleaseVersion = version
+}
+
+test {
+    useJUnitPlatform()
 }
