add voting, view logs folder, custom user agent to http requests

--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -23,3 +23,7 @@ cache.clear.text=This action will clear all local images of radio stations. This
 menu.station.favourite=Add to favourites
 menu.station.favourite.added=Station added to favourites!
 menu.station.favourite.error=Station is already in your favourites!
+menu.view.logs=Open Logs Folder
+menu.station.vote=Vote 
+vote.ok=Your vote has been successfully added!
+vote.error=Can't vote right now. You should try again soon!
