changes to station info dialog, models

--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -22,8 +22,9 @@ cache.clear.error=There was an error when clearing cache.
 cache.clear.text=This action will clear all local images of radio stations. This cannot be undone
 menu.station.favourite=Add to favourites
 menu.station.favourite.added=Station added to favourites!
-menu.station.favourite.error=Station is already in your favourites!
+menu.station.favourite.addedAlready=Station is already in your favourites!
+menu.station.favourite.error=There was an error when adding a favourite station. Try again.
 menu.view.logs=Open Logs Folder
-menu.station.vote=Vote 
+menu.station.vote=Vote
 vote.ok=Your vote has been successfully added!
 vote.error=Can't vote right now. You should try again soon!
