--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -28,3 +28,6 @@ menu.view.logs=Open Logs Folder
 menu.station.vote=Vote
 vote.ok=Your vote has been successfully added!
 vote.error=Can't vote right now. You should try again soon!
+menu.help=Help
+macos.menu.window=Window
+menu.view.openhomepage=Visit app website
