--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -31,3 +31,6 @@ vote.error=Can't vote right now. You should try again soon!
 menu.help=Help
 macos.menu.window=Window
 menu.view.openhomepage=Visit app website
+menu.station.favourite.remove=Remove from favourites
+menu.station.favourite.remove.error=There was an error removing favourite.
+menu.station.favourite.removed=Station was removed from favourites
