--- a/src/main/resources/online/hudacek/broadcastsfx/views/LibraryView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/LibraryView.properties
@@ -6,3 +6,5 @@ topStations=Top Stations
 downloadError=List of stations by countries cannot be downloaded right now.
 downloadRetry=Download error. Retry?
 history=History
+station=station
+stations=stations
