--- a/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MenuBarView.properties
@@ -34,3 +34,4 @@ menu.view.openhomepage=Visit app website
 menu.station.favourite.remove=Remove from favourites
 menu.station.favourite.remove.error=There was an error removing favourite.
 menu.station.favourite.removed=Station was removed from favourites
+menu.player.notifications=Show OS notifications
