--- a/src/main/resources/online/hudacek/broadcastsfx/views/menubar/HelpMenu.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/menubar/HelpMenu.properties
@@ -11,3 +11,8 @@ menu.help.loglevel=Change Log Level
 menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
 menu.help.loglevel.debug=Debug
+menu.help.clearDatabase=Remove all Favourites
+database.clear.confirm=Are you sure?
+database.clear.text=This operation will remove all your saved favourite stations and cannot be reverted.
+database.clear.ok=Favourites have been cleaned!
+database.clear.error=There was an error cleaning database!
