--- a/src/main/resources/online/hudacek/broadcastsfx/views/MainView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/MainView.properties
@@ -1,1 +1,1 @@
-nativePlayerInfo=Native Media Player is used. Some stations might not play. Please switch to VLC player
+nativePlayerInfo=FFmpeg Media Player is used. Some stations might not play. Please switch to VLC player
