--- a/src/main/resources/online/hudacek/broadcastsfx/views/menubar/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/broadcastsfx/views/menubar/MenuBarView.properties
@@ -5,7 +5,7 @@ menu.app.server=Select server
 menu.player.controls=Player
 menu.player.stop=Stop
 menu.player.start=Play
-menu.player.switch=Use Native Media Player
+menu.player.switch=Use FFmpeg Media Player
 menu.player.animate=Show animated radio name
 menu.player.notifications=Show OS notifications
 vote.ok=Your vote has been successfully added!
