--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,13 @@ plugins {
 
 apply plugin: 'javafx-gradle-plugin'
 
-version "0.1.1.004"
+version "0.1.1.005"
 
 compileKotlin {
+    kotlinOptions.jvmTarget = 1.8
+}
+
+compileTestKotlin {
     kotlinOptions.jvmTarget = 1.8
 }
 
