--- a/src/main/resources/online/hudacek/fxradio/fragments/AttributionsFragment.properties
+++ b/src/main/resources/online/hudacek/fxradio/fragments/AttributionsFragment.properties
@@ -13,13 +13,6 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
-appName=FXRadio
-favourites=Favourites
-history=History
-topStations=Top Stations
-copy=Copy
-copy.image.url=Copy Image URL
-close=Close
-cancel=Cancel
-url=URL
-save=Save
+title=Third Party software used by
+name=Name
+version=Version
