--- a/src/main/resources/online/hudacek/fxradio/fragments/StationInfoFragment.properties
+++ b/src/main/resources/online/hudacek/fxradio/fragments/StationInfoFragment.properties
@@ -13,13 +13,6 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
-appName=FXRadio
-favourites=Favourites
-history=History
-topStations=Top Stations
-copy=Copy
-copy.image.url=Copy Image URL
-close=Close
-cancel=Cancel
-url=URL
-save=Save
+country=Country
+language=Language
+votes=votes
