--- a/src/main/resources/online/hudacek/fxradio/fragments/StatsFragment.properties
+++ b/src/main/resources/online/hudacek/fxradio/fragments/StatsFragment.properties
@@ -13,13 +13,12 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
-appName=FXRadio
-favourites=Favourites
-history=History
-topStations=Top Stations
-copy=Copy
-copy.image.url=Copy Image URL
-close=Close
-cancel=Cancel
-url=URL
-save=Save
+statsUnavailable=Stats are not available at the moment.
+stats.status=Status
+stats.apiVersion=API Version
+stats.supportedVersion=Supported version
+stats.stations=Stations
+stats.countries=Countries
+stats.brokenStations=Broken stations
+stats.tags=Tags
+title=API Statistics
