--- a/src/main/resources/online/hudacek/fxradio/views/LibraryView.properties
+++ b/src/main/resources/online/hudacek/fxradio/views/LibraryView.properties
@@ -1,7 +1,7 @@
 search=Search for a station...
 countries=Countries
 library=Library
-downloadError=List of stations by countries cannot be downloaded right now.
+downloadError=List of notifications cannot be downloaded right now.
 downloadRetry=Download error. Retry?
 station=station
 stations=stations
