--- a/src/main/resources/online/hudacek/fxradio/views/menubar/HelpMenu.properties
+++ b/src/main/resources/online/hudacek/fxradio/views/menubar/HelpMenu.properties
@@ -6,7 +6,7 @@ menu.help.logs=Open Logs Folder
 cache.clear.confirm=Are you sure?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
-cache.clear.text=This action will clear all local images of radio stations. This cannot be undone
+cache.clear.text=This action will clear all stored images of radio stations. This cannot be undone
 menu.help.loglevel=Change Log Level
 menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
