--- a/src/main/resources/online/hudacek/fxradio/views/menubar/MenuBarView.properties
+++ b/src/main/resources/online/hudacek/fxradio/views/menubar/MenuBarView.properties
@@ -1,7 +1,7 @@
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
-menu.app.server=Select server
+menu.app.server=Change API server
 menu.player.controls=Player
 menu.player.stop=Stop
 menu.player.start=Play
