host vcs server on different url

--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,10 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
+jfxJar {
+    dependsOn test
+}
+
 jfx {
     HashMap<String, String> attributes = new HashMap<String, String>()
     attributes.put('Implementation-Version', version.toString())
