--- a/src/main/resources/online/hudacek/fxradio/views/menubar/HelpMenu.properties
+++ b/src/main/resources/online/hudacek/fxradio/views/menubar/HelpMenu.properties
@@ -12,3 +12,4 @@ menu.help.loglevel.off=Off
 menu.help.loglevel.info=Info
 menu.help.loglevel.debug=Debug
 menu.help.clearDatabase=Remove all Favourites
+menu.help.vcs.check = Check for updates
