--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Build
         run: ./gradlew jfxNative
       - name: Prepare release files
-         - run: |
-        ls -all build/jfx/*
-        zip -r release_${RUNNER_OS}.zip build/jfx/native/FXRadio.app
+        run: |
+         ls -all build/jfx/*
+         zip -r release_${RUNNER_OS}.zip build/jfx/native/FXRadio.app
       - name: Create Release
         id: create_release
         uses: "marvinpinto/action-automatic-releases@latest"
