--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '8'
-          java-package: jdk # optional (jdk, jre, jdk+fx or jre+fx) - defaults to jdk
+          java-package: jdk+fx # optional (jdk, jre, jdk+fx or jre+fx) - defaults to jdk
       - run: ./gradlew jfxNative
       - name: Prepare release files
         run: |
