--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,7 @@ jobs:
       - run: ./gradlew jfxNative
       - name: Prepare release files
         run: |
-         ls -all build/jfx/*
-         zip -r release_${RUNNER_OS}.zip build/jfx/native/FXRadio.app
+         ls -all build/*
       - name: Create Release
         id: create_release
         uses: "marvinpinto/action-automatic-releases@latest"
@@ -42,6 +41,6 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            LICENSE.txt
-            *.jar
+            build/jfx/*.jar
+            build/jfx/*.app
 
