--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           distribution: 'zulu'
           java-version: '8'
           java-package: jdk+fx # optional (jdk, jre, jdk+fx or jre+fx) - defaults to jdk
-      - run: ./gradlew jfxNative
+      - run: ./gradlew jfxListBundlers jfxNative 
       - name: Prepare release files
         run: |
          ls -all build/*
