--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,20 +25,20 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          distribution: 'zulu'
+          distribution: 'adopt'
           java-version: '8'
           java-package: jdk+fx # optional (jdk, jre, jdk+fx or jre+fx) - defaults to jdk
       - run: ./gradlew jfxListBundlers jfxNative 
       - name: Prepare release files
         run: |
-         ls -all build/*
+         ls -all build/jfx/*
+         find / -name *.app
          zip -r releaseJar.zip build/jfx/app
       - name: Create Release
         id: create_release
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
           prerelease: true
           title: "Development Build"
           files: |
