--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
+          distribution: 'zulu'
           java-version: '8'
           java-package: jdk+fx # optional (jdk, jre, jdk+fx or jre+fx) - defaults to jdk
       - run: ./gradlew jfxListBundlers jfxNative 
