--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,23 +23,37 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - run: echo ${{github.ref}}
+      - uses: battila7/jdk-via-jabba@v1
         with:
-          distribution: 'zulu'
-          java-version: '8'
-          java-package: jdk+fx # optional (jdk, jre, jdk+fx or jre+fx) - defaults to jdk
+          jdk: 1.8
+
       - run: ./gradlew jfxListBundlers jfxNative 
       - name: Prepare release files
         run: |
          ls -all build/jfx/*
          find build/* -name "*.app"
          zip -r releaseJar.zip build/jfx/app
+         
       - name: Create Release
         id: create_release
-        uses: "marvinpinto/action-automatic-releases@latest"
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: true
-          title: "Development Build"
-          files: |
-            releaseJar.zip
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Release 
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./releaseJar.zip
+          asset_name: releaseJar.zip
+          asset_content_type: application/zip
