--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: echo ${{github.ref}}
-      - uses: battila7/jdk-via-jabba@v1
+      - uses: actions/setup-java@v2
         with:
-          jdk: adopt@1.8-0
-
+          distribution: 'zulu'
+          java-version: '8'
+          java-package: jdk+fx
       - run: ./gradlew jfxListBundlers jfxNative 
       - name: Prepare release files
         run: |
