--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Build
 
 # Controls when the action will run. 
@@ -29,9 +27,9 @@ jobs:
           distribution: 'zulu'
           java-version: '8'
           java-package: jdk+fx
-      - run: ./gradlew jfxListBundlers jfxNative 
+      - run: ./gradlew jfxNative
       - name: Prepare release files
         run: |
-         ls -all build/jfx/*
+         ls -all */*
          find build/* -name "*.app"
          zip -r releaseJar.zip build/jfx/app
