--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
-# This is a basic workflow to help you get started with Actions
 name: Create Release
 
 on:
@@ -24,7 +23,7 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
-            Last release.
+            Latest release
           draft: false
           prerelease: false
       - name: Upload Release Asset
