--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,6 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
-      - run: echo ${{github.ref}}
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
@@ -30,10 +29,9 @@ jobs:
       - run: ./gradlew -i jfxNative
       - name: Prepare release files
         run: |
-         ls -all */*
-         find build/* -name "*.app"
          zip -r releaseJar.zip build/jfx/app
-         zip -r release_${RUNNER_OS}.zip build/jfx/native/FXRadio.app
+         zip -r release_${{RUNNER_OS}}.zip build/jfx/native/FXRadio.app
+         ls -all build/*/*
       - uses: actions/upload-artifact@v2
         with:
           name: fxradio.jar
@@ -41,7 +39,7 @@ jobs:
           if-no-files-found: error
       - uses: actions/upload-artifact@v2 
         with:
-          name: fxRadio_${RUNNER_OS}
-          path: release_${RUNNER_OS}.zip
+          name: fxRadio_${{RUNNER_OS}}
+          path: release_${{RUNNER_OS}}.zip
           if-no-files-found: error
   
