--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
-        env:
-         FX_PATH_APPEND: "/zulu-8.jdk/Contents/Home"
         with:
           distribution: 'zulu'
           java-version: '8'
           java-package: jdk+fx
-      - run: echo "$JAVA_HOME + $FX_PATH_APPEND"
-      - run: ./gradlew -i jfxNative
+      - run: echo "$JAVA_HOME$FX_PATH_APPEND"; ./gradlew -i jfxNative
+        env:
+         FX_PATH_APPEND: /zulu-8.jdk/Contents/Home
       - name: Prepare JAR files
         run: |
          zip -r releaseJar.zip build/jfx/app/
