--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
           distribution: 'zulu'
           java-version: '8'
           java-package: jdk+fx
-      - run: echo "$JAVA_HOME$FX_PATH_APPEND"; ./gradlew -i jfxNative
+      - run: ls -all "$JAVA_HOME"/*; echo "$JAVA_HOME$FX_PATH_APPEND"; ./gradlew -i jfxNative
         env:
-         FX_PATH_APPEND: /zulu-8.jdk/Contents/Home
+         FX_PATH_APPEND: /zulu-8.jdk/Contents/Home/jre
       - name: Prepare JAR files
         run: |
          zip -r releaseJar.zip build/jfx/app/
